# bellpepper

./: .gitignore  Cargo.toml  README.md  ThirdPartyNotices.txt  build.rs  deny.toml  release.toml
.cargo/: config
.circleci/: config.yml
.config/: nextest.toml
.github/workflows/: release-pr.yml  rust.yml  upstream_update.yml
benches/: lc.rs
crates/bellpepper/: Cargo.toml
crates/bellpepper-core/: Cargo.toml  README.md
crates/bellpepper-core/benches/: lc.rs
crates/bellpepper-core/src/: constraint_system.rs  lc.rs  lib.rs
crates/bellpepper-core/src/gadgets/: boolean.rs  mod.rs  num.rs
crates/bellpepper-core/src/util_cs/: mod.rs  test_cs.rs  test_shape_cs.rs
crates/bellpepper-gadgets/: Cargo.toml
crates/bellpepper-gadgets/src/: blake2s.rs  boolean.rs  lib.rs  lookup.rs  multipack.rs  num.rs  sha256.rs  uint32.rs
crates/bellpepper/src/: lib.rs
crates/bellpepper/src/gadgets/: blake2s.rs  boolean.rs  boolean_utils.rs  lookup.rs  mod.rs  multieq.rs  multipack.rs  negative_num.rs  num.rs  sha256.rs  uint32.rs
crates/bellpepper/src/util_cs/: bench_cs.rs  metric_cs.rs  mod.rs  shape_cs.rs  test_cs.rs  test_shape_cs.rs  witness_cs.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/bellpepper/: all.html  index.html  macro.and!.html  macro.and.html  macro.or.html  sidebar-items.js
docs/bellpepper/gadgets/: index.html  sidebar-items.js  trait.Assignment.html
docs/bellpepper/gadgets/blake2s/: fn.blake2s.html  index.html  sidebar-items.js
docs/bellpepper/gadgets/boolean/: enum.Boolean.html  fn.field_into_allocated_bits_le.html  fn.field_into_boolean_vec_le.html  fn.u64_into_boolean_vec_le.html  index.html  struct.AllocatedBit.html
docs/bellpepper/gadgets/boolean_utils/: fn.and_v.html  fn.or_v.html  fn.or_v_unchecked_for_optimization.html  index.html  sidebar-items.js
docs/bellpepper/gadgets/lookup/: fn.lookup3_xy.html  fn.lookup3_xy_with_conditional_negation.html  index.html  sidebar-items.js
docs/bellpepper/gadgets/multieq/: index.html  sidebar-items.js  struct.MultiEq.html
docs/bellpepper/gadgets/multipack/: fn.bytes_to_bits.html  fn.bytes_to_bits_le.html  fn.compute_multipacking.html  fn.pack_bits.html  fn.pack_into_inputs.html  index.html  sidebar-items.js
docs/bellpepper/gadgets/num/: index.html  struct.AllocatedNum.html  struct.Num.html
docs/bellpepper/gadgets/sha256/: fn.sha256.html  fn.sha256_block_no_padding.html  fn.sha256_compression_function.html  index.html  sidebar-items.js
docs/bellpepper/gadgets/uint32/: index.html  struct.UInt32.html
docs/bellpepper/util_cs/: index.html  sidebar-items.js  trait.Comparable.html  type.Constraint.html
docs/bellpepper/util_cs/bench_cs/: index.html  sidebar-items.js  struct.BenchCS.html
docs/bellpepper/util_cs/metric_cs/: index.html  sidebar-items.js  struct.MetricCS.html
docs/bellpepper/util_cs/witness_cs/: index.html  sidebar-items.js  struct.WitnessCS.html  trait.SizedWitness.html
docs/bellpepper_core/: all.html  constant.BELLPEPPER_VERSION.html  enum.Delta.html  enum.Index.html  enum.SynthesisError.html  index.html  sidebar-items.js  struct.LinearCombination.html  struct.Namespace.html  struct.Variable.html  trait.Circuit.html  trait.Comparable.html  trait.ConstraintSystem.html  type.Constraint.html
docs/bellpepper_core/boolean/: enum.Boolean.html  fn.field_into_allocated_bits_le.html  fn.field_into_boolean_vec_le.html  fn.u64_into_boolean_vec_le.html  index.html  sidebar-items.js  struct.AllocatedBit.html
docs/bellpepper_core/constraint_system/: enum.SynthesisError.html  struct.Namespace.html  trait.Circuit.html  trait.ConstraintSystem.html
docs/bellpepper_core/gadgets/boolean/: enum.Boolean.html  fn.field_into_allocated_bits_le.html  fn.field_into_boolean_vec_le.html  fn.u64_into_boolean_vec_le.html  index.html  struct.AllocatedBit.html
docs/bellpepper_core/gadgets/num/: index.html  struct.AllocatedNum.html  struct.Num.html
docs/bellpepper_core/lc/: enum.Index.html  struct.LinearCombination.html  struct.Variable.html
docs/bellpepper_core/num/: index.html  sidebar-items.js  struct.AllocatedNum.html  struct.Num.html
docs/bellpepper_core/test_cs/: index.html  sidebar-items.js  struct.TestConstraintSystem.html
docs/bellpepper_core/util_cs/: enum.Delta.html  trait.Comparable.html  type.Constraint.html
docs/bellpepper_core/util_cs/test_cs/: index.html  struct.TestConstraintSystem.html
docs/src/bellpepper/: lib.rs.html
docs/src/bellpepper/gadgets/: blake2s.rs.html  boolean_utils.rs.html  lookup.rs.html  mod.rs.html  multieq.rs.html  multipack.rs.html  sha256.rs.html  uint32.rs.html
docs/src/bellpepper/util_cs/: bench_cs.rs.html  metric_cs.rs.html  mod.rs.html  witness_cs.rs.html
docs/src/bellpepper_core/: constraint_system.rs.html  lc.rs.html  lib.rs.html
docs/src/bellpepper_core/gadgets/: boolean.rs.html  mod.rs.html  num.rs.html
docs/src/bellpepper_core/util_cs/: mod.rs.html  test_cs.rs.html
docs/trait.impl/bellpepper/gadgets/: trait.Assignment.js
docs/type.impl/std/: primitive.tuple.js
examples/verifier_bench/: Cargo.toml
src/: bls.rs  constraint_system.rs  domain.rs  lc.rs  lib.rs  multicore.rs  multiexp.rs  test_utils.rs
src/gadgets/: blake2s.rs  boolean.rs  lookup.rs  multieq.rs  multipack.rs  num.rs  sha256.rs  uint32.rs
src/gadgets/test/: mod.rs
src/gpu/: error.rs  fft.rs  locks.rs  mod.rs  multiexp.rs  nogpu.rs  program.rs  sources.rs  utils.rs
src/gpu/multiexp/: ec.cl
src/groth16/: ext.rs  generator.rs  mapped_params.rs  mod.rs  multiscalar.rs  params.rs  proof.rs  prover.rs  utils.rs  verifier.rs  verifying_key.rs
src/groth16/aggregate/: accumulator.rs  commit.rs  inner_product.rs  macros.rs  mod.rs  poly.rs  proof.rs  prove.rs  srs.rs  transcript.rs  verify.rs
src/groth16/aggregate/msm/: mod.rs  (+1 more)
src/groth16/tests/: dummy_engine.rs  mod.rs
src/util_cs/: bench_cs.rs  metric_cs.rs  mod.rs  test_cs.rs  witness_cs.rs
tests/: compatibility.rs  envvars1.rs  envvars2.rs  gpu_provers.rs  groth16_aggregation.rs  mimc.rs  minroot.rs
verifier-bench/: Cargo.toml
verifier-bench/src/: main.rs
(+25 files in other folders)
