# NOTE vmx 2022-08-19: Using the `__private_bench` feature of `blstrs` is just temporarily until
# https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
# `Fp2` any more.
[package]
name = "bellperson"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "zk-SNARK library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/filecoin-project/bellman"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellman"
version = "0.22.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitvec = "0.22"
blake2s_simd = "0.5"
ff = "0.12.0"
group = "0.12.0"
rand_core = "0.6"
byteorder = "1"
log = "0.4.8"
getrandom = { version = "0.2.5", optional = true }
lazy_static = "1.4.0"
rand = "0.8"
rayon = "1.5.0"
memmap = { version = "0.7.0", optional = true }
thiserror = "1.0.10"
num_cpus = "1"
crossbeam-channel = "0.5.0"
digest = "0.9.0"
itertools = "0.10.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
blstrs = { version = "0.6.0", features = ["__private_bench"] }
pairing = "0.22"
yastl = "0.1.2"
ec-gpu = { version = "0.2.0" }
ec-gpu-gen = { version = "0.4.0" }

fs2 = { version = "0.4.3", optional = true }

[dev-dependencies]
hex-literal = "0.3"
rand_xorshift = "0.3"
env_logger = "0.9.0"
criterion = "0.3.2"
rand_chacha = "0.3"
csv = "1.1.5"
tempfile = "3.1.0"
subtle = "2.2.1"
temp-env = "0.2.0"

[features]
default = ["groth16", "memmap" ]
cuda = ["ec-gpu-gen/cuda", "fs2", "blstrs/gpu"]
opencl = ["ec-gpu-gen/opencl", "fs2", "blstrs/gpu"]
groth16 = []
# Wasm friendly build. Disable default features for this.
wasm = [ "getrandom/js", "groth16" ]

# This feature disables/modifies long running tests to make the suitable for code coverage
# reporting
_coverage = []

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[test]]
name = "groth16_aggregation"
path = "tests/groth16_aggregation.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "lc"
harness = false

[workspace]
members = [
  "verifier-bench"
]

[build-dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
ec-gpu-gen = { version = "0.4.0" }
rustversion = "1.0.6"
