# NOTE vmx 2022-08-19: Using the `__private_bench` feature of `blstrs` is just temporarily until
# https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
# `Fp2` any more.
[package]
name = "bellperson"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "zk-SNARK library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/filecoin-project/bellman"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellman"
version = "0.24.1"
readme = "README.md"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
blake2s_simd = "1.0.0"
ff = "0.12.0"
group = "0.12.0"
rand_core = "0.6"
byteorder = "1"
log = "0.4.8"
rand = { version = "0.8", default-features = false }
rayon = "1.5.0"
thiserror = "1.0.10"
crossbeam-channel = "0.5.0"
digest = "0.10.6"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
blstrs = { version = "0.6.0", features = ["__private_bench"] }
pairing = "0.22"
ec-gpu = { version = "0.2.0" }
ec-gpu-gen = { version = "0.5.1" }

fs2 = { version = "0.4.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.5.8"

[dev-dependencies]
hex-literal = "0.3"
rand_xorshift = "0.3"
env_logger = "0.9.0"
criterion = "0.4.0"
rand_chacha = "0.3"
csv = "1.1.5"
tempfile = "3.1.0"
subtle = "2.2.1"
temp-env = "0.3.0"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
itertools = "0.10.0"

[features]
default = ["groth16"]
cuda = ["ec-gpu-gen/cuda", "fs2", "blstrs/gpu"]
opencl = ["ec-gpu-gen/opencl", "fs2", "blstrs/gpu"]
groth16 = []

# This feature disables/modifies long running tests to make the suitable for code coverage
# reporting
_coverage = []

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[test]]
name = "groth16_aggregation"
path = "tests/groth16_aggregation.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "lc"
harness = false

[workspace]
members = [
  "verifier-bench"
]

[build-dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
ec-gpu-gen = { version = "0.5.0" }
rustversion = "1.0.6"
