
[package]
name = "verifier-bench"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
bellperson = { path = "../" }
ff = "0.11.0"
group = "0.11.0"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.8"
sha2 = "0.9"
bincode = "1.3.1"
pairing = "0.21"
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "master" }

[features]
default = ["groth16"]
gpu = ["bellperson/gpu", "blstrs/gpu"]
groth16 = ["bellperson/groth16"]
