[package]
name = "bellpepper"
authors = [
  "porcuquine <porcuquine@gmail.com>",
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "Gadgets for a SNARK Circuit library"
documentation = "https://docs.rs/bellpepper"
homepage = "https://github.com/lurk-lab/bellpepper"
license = "MIT/Apache-2.0"
repository = "https://github.com/lurk-lab/bellpepper"
version = "0.2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
blake2s_simd = "1.0.1"
ff = { workspace = true }
group = { workspace = true }
rand_core = { workspace = true }
byteorder = "1"
thiserror = "1.0.44"
serde = { workspace = true }
fs2 = { version = "0.4.3", optional = true }
bellpepper-core = { version = "0.2.0", path = "../bellpepper-core" }

[dev-dependencies]
hex-literal = "0.4"
subtle = "2.5.0"
blstrs = { workspace = true }
rand_xorshift = "0.3.0"
sha2 = "0.10.7"

[badges]
maintenance = { status = "actively-developed" }
