[package]
name = "bellpepper"
authors = [
  "porcuquine <porcuquine@gmail.com>",
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "Gadgets for a SNARK Circuit library"
documentation = "https://docs.rs/bellpepper"
homepage = "https://github.com/lurk-lab/bellpepper"
license = "MIT/Apache-2.0"
repository = "https://github.com/lurk-lab/bellpepper"
version = "0.4.1"
readme = "README.md"
edition = "2021"
rust-version = "1.66.0"

[dependencies]
bellpepper-core = { version = "0.4", path = "../bellpepper-core" }
byteorder = { workspace = true }
ff = { workspace = true }

[dev-dependencies]
proptest = "1.3.1"
blake2s_simd = { workspace = true }
hex-literal = "0.4"
blstrs = { workspace = true }
rand_core = { workspace = true }
rand_xorshift = { workspace = true }
sha2 = "0.10.7"

[badges]
maintenance = { status = "actively-developed" }
