
[package]
name = "bellpersn-verifier-bench"
version = "0.0.1"
edition = "2018"

[dependencies]
bellperson = { path = "../..",  default-features = false }
fff = "0.2"
groupy = "0.3.1"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
sha2 = "0.9"
bincode = "1.3.1"


[features]
default = ["groth16", "blst"]
gpu = ["bellperson/gpu"]
groth16 = ["bellperson/groth16"]
blst = ["bellperson/blst"]
pairing = ["bellperson/pairing"]

[patch.crates-io]
paired = { git = "https://github.com/filecoin-project/paired", branch = "feat-compression" }
fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-compression" }
